# weekly-github-trending

./: README.md  SKILLS_CATALOG.md  generate_catalog.py
multi-agent/: .env.example  .gitignore  CHANGELOG.md  multi_agent.md  pyproject.toml
multi-agent/docs/architecture/: 2026-05-22-lanes-ceo-v1-engineering-architecture.md
multi-agent/docs/superpowers/plans/: 2026-05-22-lanes-ceo-v1-foundation.md
multi-agent/src/lanes_ceo/: __init__.py  config.py  contracts.py  daemon.py  enums.py  llm.py  orchestrator.py  policy.py  scheduler.py
multi-agent/src/lanes_ceo/ingress/: base.py  cli.py  feishu_bridge.py  feishu_server.py  hermes.py  qqbot_bridge.py  qqbot_sender.py  qqbot_server.py  shared.py  weixin_bridge.py  weixin_sender.py  weixin_server.py
multi-agent/tests/integration/: test_cli_ingress.py  test_full_pipeline.py  test_idempotency.py  test_orchestrator_gate.py  test_scheduler.py
multi-agent/tests/unit/: test_briefings_workflow.py  test_claude_task_workflow.py  test_contracts.py  test_daily_loop_workflow.py  test_deepseek_monitor_workflow.py  test_eda_testbench_workflow.py  test_fake_workflow.py  test_hermes_ingress.py  test_literature_survey_workflow.py  test_mail_digest_workflow.py  test_manuscript_tracker_workflow.py  test_memory_curation_workflow.py  test_package_smoke.py  test_paper_workflows.py  test_policy.py  test_presentation_workflow.py  test_score_reporter.py  test_simulation_data_pipeline_workflow.py  test_sqlite_store.py  test_subagent.py  test_update_checker_workflow.py  test_weekly_report_workflow.py
project_paper/: GUIDELINE.md
(+343 files in other folders)
