[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lanes-ceo"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = ["croniter>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lanes-ceo = "lanes_ceo.ingress.cli:main"
lanes-ceo-daemon = "lanes_ceo.daemon:run_daemon"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
